--- a/app/css/base.css
+++ b/app/css/base.css
@@ -1,18 +1,21 @@
 /* No sass */
 :root {
   --backgroundColor: #cefdc2;
-  --borderColor: #333;
-  --cardBg: #ce98fa;
-  --card-height: 10em;
+  --borderColor: hsl(96, 94%, 67%);
+  --cardBg: hsla(273, 91%, 79%, 0.75);
+  --card-height: 10rem;
   --card-width: var(--card-height);
   --fontFamily: sans-serif;
   --fontSize: 1rem;
   --spacers: 0.5em;
   --size: 16px;
+  padding: 0;
+  margin: 0;
 }
 
 html {
   font-size: var(--size);
+  box-sizing: border-box;
 }
 
 body {
@@ -23,38 +26,54 @@ body {
 
 main {
   border: 1px solid var(--borderColor);
-  display: grid;
-  gap: var(--spacers);
+  border-radius: 1em;
+  padding: calc(var(--spacers) * 4);
 }
 
 .board {
+  display: grid;
+  gap: calc(var(--spacers) * 2);
   grid-template-columns: repeat(auto-fill, minmax(var(--card-width), 1fr));
-  grid-template-rows: repeat(8, var(--card-height));
+  /* grid-template-rows: repeat(8, var(--card-height)); */
+  /* grid-auto-flow: row; */
+  /* height: 10em; */
+  place-items: center center;
+  width: 50em;
 }
 
-.card {
-  align-self: center;
-  /* background-color: var(--cardBg); */
+.board > .card {
+  background-color: var(--cardBg);
   border-radius: var(--spacers);
   height: var(--card-height);
-  /* padding: calc(var(--spacers) * 1.5); */
   width: var(--card-width);
   position: relative;
 }
 
-.card.face-down {
-  background-color: azure;
-  position: absolute;
-  top: 0;
+.card > svg {
+  /* border: 1px dotted red; */
 }
 
 .card.face-up {
-  background-color: bisque;
+  color: hsla(32, 98%, 66%);
+  fill: currentColor;
+  filter: opacity(0.5);
   position: absolute;
   top: 0;
 }
 
-#backOfCard,
-#frontOfCards {
+.card.hide {
   display: none;
+}
+
+.card.face-down {
+  color: hsla(202, 98%, 53%, 0.5);
+  fill: currentColor;
+  position: absolute;
+  top: 0;
+}
+
+.svg-definition {
+  height: 0;
+  position: absolute;
+  width: 0;
 }
